--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="profile">
               <img class="profile-pic" src="https://www.nicepng.com/png/detail/804-8049853_med-boukrima-specialist-webmaster-php-e-commerce-web.png" alt="my-profile">
               <h2>Hello.</h2>
-              <p>I'm Basab . I am a c++ and a web developer.I ❤️ cofee and adventure.<br> I love the adrenuline rushing through my vains.</p>
+              <p style="color: azure;">I'm Basab . I am a c++ and a web developer.I ❤️ cofee and adventure.<br> I love the adrenuline rushing through my vains.</p>
             </div>
         </div>
        
@@ -75,4 +75,5 @@
 
         
     </body>
+
 </html>                                                                                     
