--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         
 
 <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.instagram.com/">Instagram</a>
+    <a class="btn" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="btn" href="https://www.twitter.com/">Twitter</a>
+    <a class="btn" href="https://www.instagram.com/">Instagram</a>
     <p>© Basab Saha 2022.</p>
   </div>
 
